--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="assets/image/logo-page.svg" />
   <link rel="canonical" href="https://iuricode.com/" />
   <script src="assets/js/svg-inject.min.js"></script>
-  <title>Portfólio // Elyès Amor</title>
+  <title>Portfolio // Elyès Amor</title>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
               <span>Elyès Amor</span>
             </h1>
             <p class="typewriter">
-              en BTS SIO option <span>SLAM</span>.
+              étudiant en BTS SIO option <span>SLAM</span>.
             </p>
 
             <a href="./Elyes_Amor_3.pdf" download='computer' class="download-btn">Curriculum Vitae <span class="u-bolder"></span></a>
@@ -62,7 +62,7 @@
       <div class="grid-layout">
         <div>
           <div id="creator-photo" class="delayMediumReveal">
-            <h3 class="delayExtraBigReveal">Developpeur</h3>
+            <h3 class="delayExtraBigReveal">Dev<span>.</span></h3>
           </div>
           <div>
             <h4 class="delayMediumReveal">Qui suis-je</h4>
