--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
           
           <section id="s-services">
           <div class="grid-layout">
+            <a href="./rapportstage.pdf">
           <h2 class="delaySmallReveal">Veille <span>.</span></h2>
           <div id="services">
           <article class="intervalCardReveal">
