--- a/index.html
+++ b/index.html
@@ -183,10 +183,11 @@
           </article>
           
           <article class="intervalCardReveal none">
-            <h3>en construction</h3>
+            <h3>Site we GSB</h3>
             <p>
-              en construction
+              site web effectué en 1ere année sous wordpress
             </p>
+            <a href="https://gsb69.wordpress.com/" rel="noopener" target="_blank" id="teslabank">Voir le projet</a>
           </article>
           
           <article class="intervalCardReveal none">
