--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           </article>
           
           <article class="intervalCardReveal none">
-            <h3>Site we GSB</h3>
+            <h3>Site web GSB</h3>
             <p>
               site web effectué en 1ere année sous wordpress
             </p>
