--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
           <h3>veille </h3>
           <p>
             Description de ma veille : 
-            Ma veille technologique sur la cryptomonnaie, initialement axée sur l'aspect économique, s'est transformée pour se concentrer sur les avancées technologiques dans ce domaine fascinant. Mes sources principales d'information incluent 01net.com et usine digitale.fr, et je valide la pertinence des informations grâce à des outils tels que Google Alertes. Je porte une attention particulière à la réglementation en constante évolution, ainsi qu'à l'impact des cryptomonnaies sur les systèmes financiers traditionnels. Je souligne également les tendances récentes telles que le regain d'intérêt pour le Bitcoin et les anticipations d'une adoption plus large des cryptomonnaies à l'avenir. Malgré les opportunités d'investissement et de développement qu'elles offrent, je suis conscient des défis en termes de sécurité, de protection des données et d'accessibilité pour tous les utilisateurs. En conclusion, la cryptomonnaie représente une évolution fascinante du paysage financier mondial, avec des perspectives passionnantes mais également des défis à relever.
-          </p>
+            Ma veille technologique porte sur la blockchain</p>
           </article>
+            <a href="./La blockchain.pptx" download="tableau.xlsx" class="download-btn-rect">Télécharger le powerpoint</a>
           </section>
           
           <section id="s-skills">
