--- a/index.html
+++ b/index.html
@@ -221,8 +221,17 @@
           <p>
             Description de ma veille : 
             Ma veille technologique porte sur la blockchain</p>
-          </article>
             <a href="./La blockchain.pptx" download="tableau.xlsx" class="download-btn-rect">Télécharger le powerpoint</a>
+            <div class="button">
+              <a href="https://journalducoin.com/tag/blockchain/">journalducoin</a>
+          </div>
+          <div class="button">
+              <a href="https://www.lemondeinformatique.fr/actualites/">lemondeinformatique</a>
+          </div>
+          <div class="button">
+              <a href="https://www.une-blockchain.fr/">uneblochain (Très utile pour la blockchain)</a>
+          </div>
+            
           </section>
           
           <section id="s-skills">
