--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <p>
             Description de ma veille : 
             Ma veille technologique porte sur la blockchain</p>
-            <a href="./La blockchain.pptx" download="tableau.xlsx" class="download-btn-rect">Télécharger le powerpoint</a>
+            <a href="./La blockchain.pptx" download="La blockchain.pptx" class="download-btn-rect">Télécharger le powerpoint</a>
             <div class="button">
               <a href="https://journalducoin.com/tag/blockchain/">journalducoin</a>
             </div>
