--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
             <p class="delayLargeReveal">
               Je m'appelle AMOR Elyès, j'ai 20 ans
-              et je suis actuellement en BTS SIO (Services Informatiques aux Organisations)
-              option SLAM. J'étudie en 2eme année à l'établissement des Chassagnes à Oullins.
+              et  Je suis actuellement en recherche d'alternance pour mon Bachelor 3eme
+              année IT Devops fullstack / IA au sein de L'EPSI.
             </p>
             <nav class="delayLargeReveal">
               <ul>
