--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <span>Elyès Amor</span>
             </h1>
             <p class="typewriter">
-              étudiant en BTS SIO option <span>SLAM</span>.
+              étudiant en Bachelor 3eme année IT Devops fullstack /  <span>IA</span>.
             </p>
 
             <a href="./Elyes_Amor_3.pdf" download='computer' class="download-btn">Curriculum Vitae <span class="u-bolder"></span></a>
