--- a/index.html
+++ b/index.html
@@ -253,23 +253,13 @@
                   <p class="delayMediumReveal changeDescription">
                     Description des compétences
                   </p>
-                  <p><strong>- Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony) , C# (.NET), JavaScript, Python</strong></p>
-                  <p>- HTML/CSS, SQL (Ainsi que maitrise de bases de données (MariaDB, HeidiSQL))</p>
-                  <p>- Connaissances en Java, NodeJS, C#</p>
-                  <p>- Maîtrise des outils DataGrip, Git/GitLab, SSH, sous Windows et Linux (ubuntu, kali, Debian), et logiciel de création Adobe (Photoshop)</p>
+                  <p>- <strong>Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony) , C# (.NET), JavaScript, Python</p>
+                  <p>- <strong>Technologies web :</strong> HTML/CSS, SQL</p>
+                  <p>- <strong>Gestion de bases de données :</strong> MySQL, MariaDB</p>
+                  <p>- <strong>Environnements de développement :</strong> DataGrip, Git/GitLab, SSH, SSMS</p>
+                   <p>- <strong>OS maîtrisés :</strong> Windows, Linux (Ubuntu, Kali, Debian)</p>
+                   <p>- <strong>Outils créatifs :</strong> Suite Adobe (Photoshop)</p>
                 </article>
-
-
-
-                 <ul class="delayMediumReveal">
-                    <li><strong>Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony) , C# (.NET), JavaScript, Python</li>
-                    <li><strong>Technologies web :</strong> HTML/CSS, SQL</li>
-                    <li><strong>Gestion de bases de données :</strong> MySQL, MariaDB </li>
-                    <li><strong>Environnements de développement :</strong> DataGrip, Git/GitLab, SSH, SSMS</li>
-                    <li><strong>OS maîtrisés :</strong> Windows, Linux (Ubuntu, Kali, Debian)</li>
-                    <li><strong>Outils créatifs :</strong> Suite Adobe (Photoshop)</li>
-                  </ul>
-              </article>
               </div>
             </div>
           </section>
