--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
           </article>
           
           <article class="intervalCardReveal none">
-            <h3>en construction</h3>
-            <p>
-              en construction
+            <h3>Gestion d'emprunts de matériels</h3>
+              <p>
+              PHP / Symphony, pour réserver du matériel et gérer le matériel informatique.
             </p>
+            <a href="https://github.com/Mooodrix/Gestion-d-emprunts" rel="noopener" target="_blank" id="teslabank">Voir le projet</a>
           </article>
           
           <article class="intervalCardReveal none">
@@ -253,7 +254,7 @@
                   <p class="delayMediumReveal changeDescription">
                     Description des compétences
                   </p>
-                  <p>- <strong>Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony) , C# (.NET), JavaScript, Python</p>
+                  <p>- <strong>Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony) , C# (.NET), JavaScript, Python</p><br>
                   <p>- <strong>Technologies web :</strong> HTML/CSS, SQL</p>
                   <p>- <strong>Gestion de bases de données :</strong> MySQL, MariaDB</p>
                   <p>- <strong>Environnements de développement :</strong> DataGrip, Git/GitLab, SSH, SSMS</p>
