--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
                   <h2 class="delaySmallReveal">Mes compétences <span>.</span></h2>
                   <p class="delayMediumReveal changeDescription">
                     Description des compétences
-                  </p>
+                  </p><br>
                   <p>- <strong>Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony) , C# (.NET), JavaScript, Python</p><br>
-                  <p>- <strong>Technologies web :</strong> HTML/CSS, SQL</p>
-                  <p>- <strong>Gestion de bases de données :</strong> MySQL, MariaDB</p>
-                  <p>- <strong>Environnements de développement :</strong> DataGrip, Git/GitLab, SSH, SSMS</p>
-                   <p>- <strong>OS maîtrisés :</strong> Windows, Linux (Ubuntu, Kali, Debian)</p>
+                  <p>- <strong>Technologies web :</strong> HTML/CSS, SQL</p><br>
+                  <p>- <strong>Gestion de bases de données :</strong> MySQL, MariaDB</p><br>
+                  <p>- <strong>Environnements de développement :</strong> DataGrip, Git/GitLab, SSH, SSMS</p><br>
+                   <p>- <strong>OS maîtrisés :</strong> Windows, Linux (Ubuntu, Kali, Debian)</p><br>
                    <p>- <strong>Outils créatifs :</strong> Suite Adobe (Photoshop)</p>
                 </article>
               </div>
