--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
             </div>
             <h5 class="companyExperience">Site Web Alice Felumen</h5>
             <p class="changeExperience">
-              Mon 1er stage dans mon cursus BTS SIO consistait à crée de A à Z un site web sous la
-              plateforme Wordpress, modifier les metadonnées et optimiser le référencement du nouveau
-              site web et du site web principal de l'association avec laquelle j'ai collaboré.
+              Lors de mon premier stage en BTS SIO, j'ai conçu et développé un site web complet en utilisant la plateforme WordPress. 
+              Mes responsabilités comprenaient la création de l'architecture du site, l'intégration de contenus, ainsi que la personnalisation 
+              du thème selon les besoins de l'association. J'ai également optimisé les métadonnées pour améliorer le SEO, tout en mettant en 
+              place des stratégies de référencement naturel pour le nouveau site et le site principal de l'association. 
+              Ces actions ont permis de renforcer leur visibilité en ligne et d'améliorer leur positionnement sur les moteurs de recherche.
               <a href=https://alicefelumenmagicienne.fr>alicefelumenmagicienne</a>
             </p>
             <a href="./rapportstage.pdf" download='computer' class="button">Rapport de stage <span class="u-bolder"></span></a>
@@ -136,11 +138,11 @@
             </div>
             <h5 class="companyExperience">Serveur RedM (Red Dead Redemption 2)</h5>
             <p class="changeExperience">
-              Mon 2eme stage consistait à développer une nouvelle compétence en LUA tout en
-              maintenant mes compétences (principalement sql);
-              J'apportais des modifications à des scripts spécifiques ou je créais des scripts
-              complet (tel que changement de l'eau à certains endroit in game, modification de la
-              BDD lorsqu'un objet est consommée...)
+              Lors de mon deuxième stage, j'ai développé une nouvelle compétence en LUA tout en consolidant mes connaissances en SQL. 
+              J'ai apporté des modifications à des scripts existants et créé des scripts complets pour répondre aux besoins spécifiques du projet. 
+              Parmi mes réalisations, j'ai implémenté des fonctionnalités telles que le changement dynamique de l'eau à certains endroits dans le jeu 
+              et la modification automatique de la base de données lorsqu'un objet est consommé par un utilisateur. 
+              Ces contributions ont permis d'enrichir l'expérience de jeu et d'améliorer la gestion des interactions en temps réel.
             </p>
             <a href="./ElyesAmorstage2.pdf" download='computer' class="button">Rapport de stage <span class="u-bolder"></span></a>
             
