--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <a href="https://github.com/Mooodrix/Sondage" rel="noopener" target="_blank" id="teslabank">Voir le projet</a>
           </article>
           
-          <article class="intervalCardReveal none">
+          <article class="intervalCardReveal teslabank">
             <h3>Site web GSB</h3>
             <p>
               site web effectué en 1ere année sous wordpress
@@ -192,7 +192,7 @@
             <a href="https://gsb69.wordpress.com/" rel="noopener" target="_blank" id="teslabank">Voir le projet</a>
           </article>
           
-          <article class="intervalCardReveal none">
+          <article class="intervalCardReveal teslabank">
             <h3>Gestion d'emprunts de matériels</h3>
               <p>
               PHP / Symphony, pour réserver du matériel et gérer le matériel informatique.
