--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <!-- Veille BTS : Blockchain -->
       <article class="intervalCardReveal">
         <div>
-          <img src="assets/icons/icon-blockchain.svg" width="100px" height="100px" alt="Icône de blockchain" />
+          <img src="assets/icons/8757988.png" width="100px" height="100px" alt="Icône de blockchain" />
         </div>
         <h3>Veille BTS : La Blockchain</h3>
         <p>
