--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       <!-- Veille Marché Boursier et Forex -->
       <article class="intervalCardReveal">
         <div>
-          <img src="assets/icons/icon-forex.svg" width="100px" height="100px" alt="Icône marché boursier" />
+          <img src="assets/icons/trade.png" width="100px" height="100px" alt="Icône marché boursier" />
         </div>
         <h3>Veille sur le Marché Boursier et Forex</h3>
         <p>
@@ -263,7 +263,7 @@
       <!-- Veille Cryptomonnaies -->
       <article class="intervalCardReveal">
         <div>
-          <img src="assets/icons/icon-crypto.svg" width="100px" height="100px" alt="Icône de cryptomonnaie" />
+          <img src="assets/icons/bitcoin_11839555.png" width="100px" height="100px" alt="Icône de cryptomonnaie" />
         </div>
         <h3>Veille sur les Cryptomonnaies</h3>
         <p>
@@ -284,7 +284,7 @@
       <!-- Veille sur l'Intelligence Artificielle -->
       <article class="intervalCardReveal">
         <div>
-          <img src="assets/icons/icon-ai.svg" width="100px" height="100px" alt="Icône intelligence artificielle" />
+          <img src="assets/icons/ai.png" width="100px" height="100px" alt="Icône intelligence artificielle" />
         </div>
         <h3>Veille sur l'Intelligence Artificielle</h3>
         <p>
