--- a/index.html
+++ b/index.html
@@ -228,14 +228,10 @@
         </p>
         <a href="./blockchain.pptx" download="blockchain.pptx" class="download-btn-rect">Télécharger le PowerPoint</a>
         <h4>Ressources utilisées :</h4>
-        <div class="button">
-          <a href="https://journalducoin.com/tag/blockchain/" target="_blank">Journal du Coin</a>
-        </div>
-        <div class="button">
-          <a href="https://www.lemondeinformatique.fr/actualites/" target="_blank">Le Monde Informatique</a>
-        </div>
-        <div class="button">
-          <a href="https://www.une-blockchain.fr/" target="_blank">Une Blockchain</a>
+        <div class="resource-buttons">
+          <a href="https://journalducoin.com/tag/blockchain/" target="_blank" class="resource-link">Journal du Coin</a>
+          <a href="https://www.lemondeinformatique.fr/actualites/" target="_blank" class="resource-link">Le Monde Informatique</a>
+          <a href="https://www.une-blockchain.fr/" target="_blank" class="resource-link">Une Blockchain</a>
         </div>
       </article>
 
@@ -249,14 +245,10 @@
           Depuis mon BTS, je poursuis des veilles sur le marché boursier et le Forex afin de suivre les tendances des devises, les mouvements de marché, et les stratégies de trading.
         </p>
         <h4>Ressources utilisées :</h4>
-        <div class="button">
-          <a href="https://www.investing.com/" target="_blank">Investing</a>
-        </div>
-        <div class="button">
-          <a href="https://www.bloomberg.com/markets" target="_blank">Bloomberg Markets</a>
-        </div>
-        <div class="button">
-          <a href="https://www.dailyfx.com/" target="_blank">DailyFX</a>
+        <div class="resource-buttons">
+          <a href="https://www.investing.com/" target="_blank" class="resource-link">Investing</a>
+          <a href="https://www.bloomberg.com/markets" target="_blank" class="resource-link">Bloomberg Markets</a>
+          <a href="https://www.dailyfx.com/" target="_blank" class="resource-link">DailyFX</a>
         </div>
       </article>
 
@@ -270,14 +262,10 @@
           Je suis également les évolutions des cryptomonnaies pour analyser les tendances des principaux actifs comme le Bitcoin et l'Ethereum, ainsi que les nouvelles technologies associées.
         </p>
         <h4>Ressources utilisées :</h4>
-        <div class="button">
-          <a href="https://cointelegraph.com/" target="_blank">CoinTelegraph</a>
-        </div>
-        <div class="button">
-          <a href="https://cryptobriefing.com/" target="_blank">Crypto Briefing</a>
-        </div>
-        <div class="button">
-          <a href="https://www.coindesk.com/" target="_blank">CoinDesk</a>
+        <div class="resource-buttons">
+          <a href="https://cointelegraph.com/" target="_blank" class="resource-link">CoinTelegraph</a>
+          <a href="https://cryptobriefing.com/" target="_blank" class="resource-link">Crypto Briefing</a>
+          <a href="https://www.coindesk.com/" target="_blank" class="resource-link">CoinDesk</a>
         </div>
       </article>
 
@@ -291,19 +279,16 @@
           Récemment, je m'intéresse de près aux avancées en intelligence artificielle, couvrant des domaines tels que le machine learning, l'automatisation et leurs applications dans divers secteurs.
         </p>
         <h4>Ressources utilisées :</h4>
-        <div class="button">
-          <a href="https://www.deeplearning.ai/" target="_blank">DeepLearning.ai</a>
-        </div>
-        <div class="button">
-          <a href="https://www.aitrends.com/" target="_blank">AI Trends</a>
-        </div>
-        <div class="button">
-          <a href="https://towardsdatascience.com/" target="_blank">Towards Data Science</a>
+        <div class="resource-buttons">
+          <a href="https://www.deeplearning.ai/" target="_blank" class="resource-link">DeepLearning.ai</a>
+          <a href="https://www.aitrends.com/" target="_blank" class="resource-link">AI Trends</a>
+          <a href="https://towardsdatascience.com/" target="_blank" class="resource-link">Towards Data Science</a>
         </div>
       </article>
     </div>
   </div>
 </section>
+
 
           
           <section id="s-skills">
