--- a/index.html
+++ b/index.html
@@ -307,40 +307,27 @@
       <hr class="separator">
       
       <!-- Section Compétences -->
-      <article id="skills-section">
-        <h2 class="delaySmallReveal">Mes Compétences <span>.</span></h2>
-        <p class="delayMediumReveal changeDescription">
-          Description des compétences
-        </p>
-        <div class="skills-list">
-          <div class="skill-item">
-            <h4>Langages de Programmation :</h4>
-            <p>PHP (Laravel [MVC] / Symphony), C# (.NET), JavaScript, Python</p>
-          </div>
-          <div class="skill-item">
-            <h4>Technologies Web :</h4>
-            <p>HTML/CSS, SQL</p>
-          </div>
-          <div class="skill-item">
-            <h4>Gestion de Bases de Données :</h4>
-            <p>MySQL, MariaDB</p>
-          </div>
-          <div class="skill-item">
-            <h4>Environnements de Développement :</h4>
-            <p>DataGrip, Git/GitLab, SSH, SSMS</p>
-          </div>
-          <div class="skill-item">
-            <h4>OS Maîtrisés :</h4>
-            <p>Windows, Linux (Ubuntu, Kali, Debian)</p>
-          </div>
-          <div class="skill-item">
-            <h4>Outils Créatifs :</h4>
-            <p>Suite Adobe (Photoshop)</p>
-          </div>
+      <section id="skills-section">
+    <h2>Compétences</h2>
+    <div class="skills-list">
+        <div class="skill-item">
+            <h4>Compétence 1</h4>
+            <p>Description de la compétence 1. Cela peut inclure des technologies, des outils ou des méthodes.</p>
         </div>
-      </article>
+        <div class="skill-item">
+            <h4>Compétence 2</h4>
+            <p>Description de la compétence 2. Cela peut inclure des technologies, des outils ou des méthodes.</p>
+        </div>
+        <div class="skill-item">
+            <h4>Compétence 3</h4>
+            <p>Description de la compétence 3. Cela peut inclure des technologies, des outils ou des méthodes.</p>
+        </div>
+        <div class="skill-item">
+            <h4>Compétence 4</h4>
+            <p>Description de la compétence 4. Cela peut inclure des technologies, des outils ou des méthodes.</p>
+        </div>
+        <!-- Ajoutez d'autres compétences ici -->
     </div>
-  </div>
 </section>
 
           
