--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@
           
           <footer>
           <div class="grid-layout">
+            <p class="delayMediumReveal">Vous pouvez m'envoyer un e-mail à <a href="mailto:elyesamor96@gmail.com">elyesamor96@gmail.com</a>.
+          </p>    
+          <div class="grid-layout">
           <p>
             Copyright © 2024
             <a href="https://iuricode.com" rel="noopener" target="_blank">
@@ -340,7 +343,7 @@
           <div>
           <p>Powered by</p>
           <img src="./assets/logo2.png" />
-          
+          </div>
           </div>
           </div>
           </footer>
