--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <h3>Site Web Alice Felumen</h3>
             </div>
           </div>
-          <div class="text-experience intervalCardReveal">
+          <div class="text-experience">
             <div>
               <p class="dateExperience">9 mai 2023 au 9 juin 2023 (1 mois)</p>
             </div>
