--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="grid-layout">
         <h2 class="delaySmallReveal">Expériences <span>.</span></h2>
         <div id="experience">
-          <div class="option-experience intervalCardReveal" id="experience-company">
+          <div class="option-experience" id="experience-company">
             <div class="company digitalhouse">
               <h3>Site Web Alice Felumen</h3>
             </div>
@@ -127,12 +127,12 @@
           </div>
           
 
-          <div class="option-experience intervalCardReveal" id="experience-redm">
+          <div class="option-experience" id="experience-redm">
             <div class="company RedM">
               <h3>Serveur RedM   (Red Dead Redemption 2)</h3>
             </div>
           </div>
-          <div class="text-experience intervalCardReveal">
+          <div class="text-experience">
             <div>
               <p class="dateExperience">8 janvier 2024 au 23 février 2024 (1 mois)</p>
             </div>
