--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
             <a href="https://github.com/Mooodrix/Gestion-d-emprunts" rel="noopener" target="_blank" id="teslabank">Voir le projet</a>
           </article>
           
-          <article class="intervalCardReveal none">
-            <h3>en construction</h3>
+          <article class="intervalCardReveal teslabank">
+            <h3>Ecole Indirect</h3>
             <p>
-              en construction
+              Comme Ecole Directe, servant à gérer les notes, absences, retard... en Python.
             </p>
           </article>
           </div>
-          <a href="https://github.com/Mooodrix" rel="noopener" target="_blank" class="delayExtraBigReveal">Repository GitHub</a>
+          <a href="https://github.com/Mooodrix/ecoleindirect" rel="noopener" target="_blank" class="delayExtraBigReveal">Repository GitHub</a>
           </div>
           </section>
           
