--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </p>
           </article>
           </div>
-          <a href="https://github.com/Mooodrix/ecoleindirect" rel="noopener" target="_blank" class="delayExtraBigReveal">Repository GitHub</a>
+          <a href="https://github.com/Mooodrix/ecoleindirect" rel="noopener" target="_blank" class="teslabank">Repository GitHub</a>
           </div>
           </section>
           
