--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
             <p>
               Comme Ecole Directe, servant à gérer les notes, absences, retard... en Python.
             </p>
+            <a href="https://github.com/Mooodrix/ecoleindirect" rel="noopener" target="_blank" id="teslabank">Voir le projet</a>
           </article>
           </div>
-          <a href="https://github.com/Mooodrix/ecoleindirect" rel="noopener" target="_blank" class="teslabank">Repository GitHub</a>
+          <a href="https://github.com/Mooodrix" rel="noopener" target="_blank" class="delayExtraBigReveal">Repository GitHub</a>
           </div>
           </section>
           
