--- a/index.html
+++ b/index.html
@@ -297,20 +297,41 @@ mon portfolio : </section>
 
             <br>
 
-            <article id="skills-text">
-                <h2 class="delaySmallReveal">Mes compétences <span>.</span></h2>
-                <p class="delayMediumReveal changeDescription">
-                    Description des compétences
-                </p>
-                <br>
-                <p>- <strong>Langages de programmation :</strong> PHP (Laravel [MVC] / Symphony), C# (.NET), JavaScript, Python</p><br>
-                <p>- <strong>Technologies web :</strong> HTML/CSS, SQL</p><br>
-                <p>- <strong>Gestion de bases de données :</strong> MySQL, MariaDB</p><br>
-                <p>- <strong>Environnements de développement :</strong> DataGrip, Git/GitLab, SSH, SSMS</p><br>
-                <p>- <strong>OS maîtrisés :</strong> Windows, Linux (Ubuntu, Kali, Debian)</p><br>
-                <p>- <strong>Outils :</strong> Suite Adobe (Photoshop), Prestashop, Wordpress</p>
-            </article>
-        </div>
+<section id="s-skills">
+    <div class="grid-layout">
+        <article id="skills-text">
+            <h2 class="delaySmallReveal">Mes compétences <span>.</span></h2>
+            <p class="delayMediumReveal changeDescription">
+                Description des compétences
+            </p>
+            <br>
+            <ul class="skills-list">
+                <li class="skill-item">
+                    <h4>Langages de programmation</h4>
+                    <p>PHP (Laravel [MVC] / Symphony), C# (.NET), JavaScript, Python</p>
+                </li>
+                <li class="skill-item">
+                    <h4>Technologies web</h4>
+                    <p>HTML/CSS, SQL</p>
+                </li>
+                <li class="skill-item">
+                    <h4>Gestion de bases de données</h4>
+                    <p>MySQL, MariaDB</p>
+                </li>
+                <li class="skill-item">
+                    <h4>Environnements de développement</h4>
+                    <p>DataGrip, Git/GitLab, SSH, SSMS</p>
+                </li>
+                <li class="skill-item">
+                    <h4>OS maîtrisés</h4>
+                    <p>Windows, Linux (Ubuntu, Kali, Debian)</p>
+                </li>
+                <li class="skill-item">
+                    <h4>Outils</h4>
+                    <p>Suite Adobe (Photoshop), Prestashop, Wordpress</p>
+                </li>
+            </ul>
+        </article>
     </div>
 </section>
 
