--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
   
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="assets/image/logo-page.svg" />
+  <link rel="icon" type="image/svg+xml" href="./assets/image/logo-page.svg" />
   
   <title>Elyès Amor - Développeur Full Stack DevOps & IA</title>
 </head>
@@ -102,7 +102,7 @@
           <div class="hero__visual">
             <div class="hero__avatar">
               <div class="avatar-circle">
-                <img src="assets/image/photo.jpg" alt="Elyès Amor" class="avatar-image" />
+                <img src="./assets/image/photo.jpg" alt="Elyès Amor" class="avatar-image" />
               </div>
             </div>
           </div>
