--- a/index.html
+++ b/index.html
@@ -867,8 +867,8 @@
               <div class="skill-summary-item">
                 <div class="skill-emoji">🔄</div>
                 <div class="skill-desc">
-                  <strong>Talend</strong>
-                  <span>Créer des flux ETL sans coder</span>
+                  <strong>Aiven</strong>
+                  <span>Créer des Bases de données en ligne</span>
                 </div>
               </div>
               <div class="skill-summary-item">
